<resources>
    <string name="app_name">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_title">Pittsburgh Post-Gazette endorses Trump, first GOP candidate since 1972 - New York Post</string>
    <string name="decription">The Pittsburgh Post-Gazette endorsed President Trump in the 2020 election — citing his economic accomplishments and handling of trade with China — marking the first time since 1972 that…</string>
    <string name="image_detail">image detail</string>
    <string name="mark_moore">Mark Moore</string>
    <string name="date">2020-11-02T21:02:00Z</string>
    <string name="content">The Pittsburgh Post-Gazette endorsed President Trump in the 2020 election — citing his economic accomplishments and handling of trade with China — marking the first time since 1972 that the newspaper</string>
    <string name="detail_news">Detail News</string>
    <string name="loading">Loading...</string>
</resources>